--- a/main.css
+++ b/main.css
@@ -9,3 +9,9 @@ h1 {
     margin: 20px auto;
     text-align: center;
 }
+
+p {
+    font-size: 25px;
+    font-weight: bold;
+    color: #2c2ce7;
+}
